# reposcan

./: .env.example  .gitignore  AGENTS.md  DESIGN_SEC_APP_SIMPLE_v0.md  Dockerfile  Dockerfile.api  ENV_VARIABLES.md  LICENSE  Makefile  README.md  README_API.md  README_DOCKER.md  TROUBLESHOOTING.md  docker-compose.yml  railway.json  railway.toml  railway.worker.json  railway.worker.toml  requirements.txt  sec_audit.py  trivy.yaml
.claude/: CLAUDE.md
api/: __init__.py  main.py  models.py
backend/: README.md  audit.py  railway.json  railway.worker.json  requirements.txt
backend-api/: .gitignore  README.md  go.mod  go.sum
backend-worker/: README.md  audit.py  pyproject.toml
backend-worker/src/api/: models.py
backend-worker/src/audit/: ecosystem.py  fs.py  scanners.py
backend-worker/src/audit/ai/: llm_client.py  summarizer.py
backend-worker/src/audit/ai/parsers/: __init__.py  osv.py  zap.py
backend-worker/tests/: __init__.py  test_integration_github.py  test_repos.py  test_scanners.py  test_utils.py
design/: DESIGN_GITHUB_REPOS_INTEGRATION.md  DESIGN_v0-AI.md
docker/: Dockerfile  Dockerfile.api  README.md  docker-compose.yml
docs/: API.md  CLI.md  CONFIGURATION.md  DESIGN_DOCKER_IMAGE_OPTIMIZATION_v1.md  DESIGN_GITHUB_REPOS_INTEGRATION_v2.md  DESIGN_WORKER_IMPROVEMENTS_v1.md  DOCKER.md  README.md  REPOSITORY_REORGANIZATION_PROPOSAL.md  SCANNER_VERIFICATION.md  deployment-options.md
frontend/: .env.local.example  .gitignore  .source.ts  CLAUDE.md  Dockerfile  README.md  bun.lockb  mdx.d.ts  next.config.ts  package.json  pnpm-lock.yaml  railway.json  (+6 more)
(+464 files in other folders)
