[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-audit-backend"
version = "0.1.0"
description = "Security audit backend (API, worker, audit CLI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "celery==5.3.4",
    "redis==5.0.1",
    "pydantic==2.9.2",
    "anthropic==0.34.0",
    "openai==1.55.0",
    "asyncpg==0.29.0",
    "boto3==1.34.0",
    "pytest==8.3.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
audit = "audit.__main__:main"
